--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,12 +6,13 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row">
-        <td>GPS 938</td>
-        <td>Positioning</td>
-        <td>true</td>
-        <td>HIGH</td>
-        <td>2001-11-01</td>
+    <tr class="data-row" *ngFor="let listInfo of satellites">
+        
+        <td>{{listInfo.name}}</td>
+        <td [class.warning]="listInfo.isSpaceDebris()">{{listInfo.type}}</td>
+        <td>{{listInfo.operational}}</td>
+        <td>{{listInfo.orbitType}}</td>
+        <td>{{listInfo.launchDate}}</td>
     </tr>
 </table>
 
